// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkboxes 1`] = `
{
  "content": "# Housework

## Main

- [x] Dishes
- [ ] Cleaning the bathroom
- [x] Change the light bulbs
- [ ] something else

## [x] should it works on titles?

## [x] idk if it should!

### [ ] test

### [x] test

- [x] test
- [x] test


## [x] only works on list items is better
\`\`\`
[ ] this is not a checkbox either
\`\`\`
",
  "contentLineOffset": 0,
  "features": {
    "hljs": true,
  },
  "root": {
    "children": [
      {
        "children": [
          {
            "children": [],
            "content": "<svg width="16" height="16" fill="currentColor" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"></path></svg>  Dishes",
          },
          {
            "children": [],
            "content": "<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 -3 24 24"><path fill-rule="evenodd" d="M6 5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1zM3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3v-5z" clip-rule="evenodd"></path></svg>  Cleaning the bathroom",
          },
          {
            "children": [],
            "content": "<svg width="16" height="16" fill="currentColor" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"></path></svg>  Change the light bulbs",
          },
          {
            "children": [],
            "content": "<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 -3 24 24"><path fill-rule="evenodd" d="M6 5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1zM3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3v-5z" clip-rule="evenodd"></path></svg>  something else",
          },
        ],
        "content": "Main",
      },
      {
        "children": [],
        "content": "<svg width="16" height="16" fill="currentColor" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"></path></svg>  should it works on titles?",
      },
      {
        "children": [
          {
            "children": [],
            "content": "<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 -3 24 24"><path fill-rule="evenodd" d="M6 5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1zM3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3v-5z" clip-rule="evenodd"></path></svg>  test",
          },
          {
            "children": [
              {
                "children": [],
                "content": "<svg width="16" height="16" fill="currentColor" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"></path></svg>  test",
              },
              {
                "children": [],
                "content": "<svg width="16" height="16" fill="currentColor" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"></path></svg>  test",
              },
            ],
            "content": "<svg width="16" height="16" fill="currentColor" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"></path></svg>  test",
          },
        ],
        "content": "<svg width="16" height="16" fill="currentColor" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"></path></svg>  idk if it should!",
      },
      {
        "children": [
          {
            "children": [],
            "content": "<pre><code><span class="hljs-string">[ ]</span> <span class="hljs-keyword">this</span> <span class="hljs-keyword">is</span> <span class="hljs-keyword">not</span> a checkbox either
</code></pre>",
          },
        ],
        "content": "<svg width="16" height="16" fill="currentColor" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"></path></svg>  only works on list items is better",
      },
    ],
    "content": "Housework",
  },
}
`;

exports[`content with frontmatter 1`] = `
{
  "content": "
- l1
  - l1.1
  - l1.2
    - l1.2.1
",
  "contentLineOffset": 4,
  "features": {},
  "frontmatter": {
    "markmap": {
      "color": [
        "blue",
      ],
    },
  },
  "root": {
    "children": [
      {
        "children": [],
        "content": "l1.1",
      },
      {
        "children": [
          {
            "children": [],
            "content": "l1.2.1",
          },
        ],
        "content": "l1.2",
      },
    ],
    "content": "l1",
  },
}
`;

exports[`content with line endings of CRLF 1`] = `
{
  "content": "
- l1
  - l1.1
  - l1.2
    - l1.2.1
",
  "contentLineOffset": 4,
  "features": {},
  "frontmatter": {
    "markmap": {
      "color": [
        "blue",
      ],
    },
  },
  "root": {
    "children": [
      {
        "children": [],
        "content": "l1.1",
      },
      {
        "children": [
          {
            "children": [],
            "content": "l1.2.1",
          },
        ],
        "content": "l1.2",
      },
    ],
    "content": "l1",
  },
}
`;

exports[`content with only katex enabled 1`] = `
{
  "content": "
- $x = {-b pm sqrt{b^2-4ac} over 2a}$
",
  "contentLineOffset": 4,
  "features": {
    "katex": true,
  },
  "frontmatter": {
    "markmap": {
      "color": [
        "blue",
      ],
    },
  },
  "root": {
    "children": [],
    "content": "<span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>x</mi><mo>=</mo><mrow><mo>−</mo><mi>b</mi><mi>p</mi><mi>m</mi><mi>s</mi><mi>q</mi><mi>r</mi><mi>t</mi><mrow><msup><mi>b</mi><mn>2</mn></msup><mo>−</mo><mn>4</mn><mi>a</mi><mi>c</mi></mrow><mi>o</mi><mi>v</mi><mi>e</mi><mi>r</mi><mn>2</mn><mi>a</mi></mrow></mrow><annotation encoding="application/x-tex">x = {-b pm sqrt{b^2-4ac} over 2a}</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.4306em;"></span><span class="mord mathnormal">x</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:1.0085em;vertical-align:-0.1944em;"></span><span class="mord"><span class="mord">−</span><span class="mord mathnormal">b</span><span class="mord mathnormal">p</span><span class="mord mathnormal">m</span><span class="mord mathnormal">s</span><span class="mord mathnormal" style="margin-right:0.03588em;">q</span><span class="mord mathnormal" style="margin-right:0.02778em;">r</span><span class="mord mathnormal">t</span><span class="mord"><span class="mord"><span class="mord mathnormal">b</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8141em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight">2</span></span></span></span></span></span></span></span><span class="mspace" style="margin-right:0.2222em;"></span><span class="mbin">−</span><span class="mspace" style="margin-right:0.2222em;"></span><span class="mord">4</span><span class="mord mathnormal">a</span><span class="mord mathnormal">c</span></span><span class="mord mathnormal">o</span><span class="mord mathnormal" style="margin-right:0.03588em;">v</span><span class="mord mathnormal" style="margin-right:0.02778em;">er</span><span class="mord">2</span><span class="mord mathnormal">a</span></span></span></span></span>",
  },
}
`;

exports[`content with only katex enabled 2`] = `
{
  "scripts": [
    {
      "data": {
        "fn": [Function],
        "getParams": [Function],
      },
      "type": "iife",
    },
    {
      "data": {
        "defer": true,
        "src": "https://cdn.jsdelivr.net/npm/webfontloader@undefined/webfontloader.js",
      },
      "type": "script",
    },
  ],
  "styles": [
    {
      "data": {
        "href": "https://cdn.jsdelivr.net/npm/katex@undefined/dist/katex.min.css",
      },
      "type": "stylesheet",
    },
  ],
}
`;

exports[`content without frontmatter 1`] = `
{
  "content": "- l1
  - l1.1
  - l1.2
    - l1.2.1
",
  "contentLineOffset": 0,
  "features": {},
  "root": {
    "children": [
      {
        "children": [],
        "content": "l1.1",
      },
      {
        "children": [
          {
            "children": [],
            "content": "l1.2.1",
          },
        ],
        "content": "l1.2",
      },
    ],
    "content": "l1",
  },
}
`;

exports[`custom url provider 1`] = `
{
  "scripts": [
    {
      "data": {
        "fn": [Function],
        "getParams": [Function],
      },
      "type": "iife",
    },
    {
      "data": {
        "defer": true,
        "src": "/local/webfontloader@undefined/webfontloader.js",
      },
      "type": "script",
    },
  ],
  "styles": [
    {
      "data": {
        "href": "/local/katex@undefined/dist/katex.min.css",
      },
      "type": "stylesheet",
    },
    {
      "data": {
        "href": "/local/@highlightjs/cdn-assets@undefined/styles/default.min.css",
      },
      "type": "stylesheet",
    },
  ],
}
`;

exports[`images 1`] = `
{
  "content": "![](image1.png)

![](image2.png)
",
  "contentLineOffset": 0,
  "features": {},
  "root": {
    "children": [
      {
        "children": [],
        "content": "<img src="image1.png" alt="">",
      },
      {
        "children": [],
        "content": "<img src="image2.png" alt="">",
      },
    ],
    "content": "",
  },
}
`;

exports[`magic comments 1`] = `
{
  "content": "## heading 1 <!-- markmap: fold -->

- 1 <!-- markmap: foldAll -->
  - 1.1
  - 1.2
- 2
  - 2.1
  - 2.2
",
  "contentLineOffset": 0,
  "features": {},
  "root": {
    "children": [
      {
        "children": [
          {
            "children": [],
            "content": "1.1",
          },
          {
            "children": [],
            "content": "1.2",
          },
        ],
        "content": "1",
        "payload": {
          "fold": 2,
        },
      },
      {
        "children": [
          {
            "children": [],
            "content": "2.1",
          },
          {
            "children": [],
            "content": "2.2",
          },
        ],
        "content": "2",
      },
    ],
    "content": "heading 1",
    "payload": {
      "fold": 1,
    },
  },
}
`;

exports[`plugins 1`] = `
{
  "scripts": [
    {
      "data": {
        "fn": [Function],
        "getParams": [Function],
      },
      "type": "iife",
    },
    {
      "data": {
        "defer": true,
        "src": "https://cdn.jsdelivr.net/npm/webfontloader@undefined/webfontloader.js",
      },
      "type": "script",
    },
  ],
  "styles": [
    {
      "data": {
        "href": "https://cdn.jsdelivr.net/npm/katex@undefined/dist/katex.min.css",
      },
      "type": "stylesheet",
    },
    {
      "data": {
        "href": "https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@undefined/styles/default.min.css",
      },
      "type": "stylesheet",
    },
  ],
}
`;

exports[`tables 1`] = `
{
  "content": "| products | price |
|-|-|
| apple | 10 |
| banana | 12 |
",
  "contentLineOffset": 0,
  "features": {},
  "root": {
    "children": [],
    "content": "<table>
<thead>
<tr><th>products</th><th>price</th></tr>
</thead>
<tbody>
<tr><td>apple</td><td>10</td></tr>
<tr><td>banana</td><td>12</td></tr>
</tbody>
</table>",
  },
}
`;
